--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.10",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.511.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.16",
     "react": "^18.3.1",
